security config edited and fixed dashboard 500 error